Added custom mod directory loading

--- a/ModControl/ModControl.csproj
+++ b/ModControl/ModControl.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <Authors>Ivan Vuk</Authors>
+    <Company>Ivan Vuk</Company>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
